--- a/DataScienceEcosystem.ipynb
+++ b/DataScienceEcosystem.ipynb
@@ -28,7 +28,7 @@
    "metadata": {},
    "source": [
     "**Objectives:**\n",
-    "* List popular languages for Data Science.\n",
+    "* List popular languages and libraries used for Data Science.\n",
     "* Use Jupyter Notebook and explore the ecosystem of Data science.\n",
     "* Tabulate some of the Open Source Data Science Tool.\n",
     "* Solve and show an arithmetic expression.\n",
@@ -50,6 +50,16 @@
     "1. Python\n",
     "2. SQL\n",
     "3. R"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Some of the commonly used libraries used by Data Scientists include:\n",
+    "1. NumPy\n",
+    "2. Pandas\n",
+    "3. Matplotlib "
    ]
   },
   {
